--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "waiwit",
   "license": "ISC",
   "dependencies": {
+    "@pdftron/pdfjs-express": "^8.7.4",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
