--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JWT_SECRET=azxcaswd
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES=90
 TOKEN_HEADER_KEY= clip_art_token_head_key
+DATABASE_URL='mysql://yqjg3w0z29hnsmsqkfqj:pscale_pw_EQT0ek1NHE2JvIVNn8523piU31RzGOJuSiUHQqOnhrq@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
