--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ JWT_SECRET=azxcaswd
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES=90
 TOKEN_HEADER_KEY= clip_art_token_head_key
-DATABASE_URL='mysql://cyxgaocrykyaknjcaz6k:pscale_pw_VdmwGxjpgftRTqmKwO9Wi9ipkdKM2rdgbydQhJMRmHp@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://ujbnmpeudxrzoca8mcy7:pscale_pw_7UjdfmOsTgaP8ghd0kErCiIAf7bExchg0IFPtSaMOVF@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
  
