--- a/.env
+++ b/.env
@@ -3,5 +3,4 @@ JWT_SECRET=azxcaswd
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES=90
 TOKEN_HEADER_KEY= clip_art_token_head_key
-DATABASE_URL='mysql://ujbnmpeudxrzoca8mcy7:pscale_pw_7UjdfmOsTgaP8ghd0kErCiIAf7bExchg0IFPtSaMOVF@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
- 
+DATABASE_URL='mysql://zranx7be1v5i1l5b1zir:pscale_pw_irwHYCE4mDbq5inyJpZfu1lMr0kZ6nnlfYqBCNroMmi@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
