--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ JWT_SECRET=azxcaswd
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES=90
 TOKEN_HEADER_KEY= clip_art_token_head_key
-DATABASE_URL='mysql://o9tz4g0xor92jgd3jjec:pscale_pw_fgGLB3YNVLOalo2GSCvPqVcnHk76HLMBBI0uUmPRwFq@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://zdw51oyw5pxxotcyso0c:pscale_pw_w7aUQjSfoB8R90zUFHaQwJ8yiQ5PCEj0MeUvxLXm4EK@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
