--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "socker.io": "^0.0.0-alpha-beta",
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
+    "star-rating.js": "^4.3.0",
     "text-marshal": "^0.0.2"
   },
   "devDependencies": {
