--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ JWT_SECRET=azxcaswd
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES=90
 TOKEN_HEADER_KEY= clip_art_token_head_key
-DATABASE_URL='mysql://mjunr3ocph2khvii4viu:pscale_pw_EMYb2yhivGf5TqFxQj4oqx1ZYxqLs0MUUk8srf30q4j@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='mysql://p56qp7vj9jczufoz9kia:pscale_pw_KxcGNq9YcQ6aWBXgGdorXH23ifXyPbhgTIVVAvfTdiq@aws.connect.psdb.cloud/clipartpress?ssl={"rejectUnauthorized":true}'
